--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.6.1",
         "admin-lte": "^3.0.0-alpha.2",
-        "laravel-vue-pagination": "^2.2.0"
+        "laravel-vue-pagination": "^2.2.0",
+        "vue-router": "^3.0.2"
     }
 }
